--- a/src/main/resources/static/assets/list.html
+++ b/src/main/resources/static/assets/list.html
@@ -229,7 +229,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      let root = "/board";
+      let root = "http://localhost:9000/";
 
       // 회원 목록.
       fetch(`${root}/admin/user`)
